# DeltaGraphAr

./: CHANGELOG.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: publish.yml
benchmarks/: bench_v1.py
deltagraphar/: cli.py
deltagraphar/format/: paths.py  reader.py  schema.py  writer.py
deltagraphar/store/: compaction.py  graphstore.py  ids.py
deltagraphar/versioning/: backend.py  lakefs_backend.py  local_backend.py
examples/: ldbc_snb_tiny_loader.py  movies.py  movies_viz.py  quickstart.py
tests/: conftest.py  test_append_and_read.py  test_cli.py  test_compaction.py  test_correctness_property.py  test_format_roundtrip.py  test_schema_evolution.py  test_time_travel.py  test_versioning.py
